fix wraper width

--- a/jossor-board/style.css
+++ b/jossor-board/style.css
@@ -3,6 +3,10 @@
     margin: 0;
 }
 
+body{
+    background: #cccccc url(img/bodybg1.png);
+}
+
 .wraper{
     width: 90%;
     margin: 0 auto;
@@ -26,7 +30,7 @@
 }
 
 .title{
-    width: 65%;
+    width: 75%;
     height: 150px;
     background-color: #5cc2eb;
     float: left;
@@ -43,7 +47,7 @@
 }
 
 .news{
-    width:90%;
+    width:100%;
     height: 100px;
 }
 
@@ -62,7 +66,7 @@
 }
 
 .footer{
-    width: 90%;
+    width: 100%;
     height: 500px;
     background-color: #1fd1d1;
 }
@@ -78,6 +82,7 @@
     height: 500px;
     float: left;
     text-align: center;
+    font-size: 30px;
 }
 
 .footer-right{
@@ -94,4 +99,10 @@
 
 .news-2 span{
     vertical-align: top;
+}
+
+.footer-area{
+    width: 100%;
+    height: 100px;
+    background-color: #57cfcf;
 }
